--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-community/push-notification-ios": "^1.11.0",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-checkbox": "~2.3.1",
+    "expo-device": "^5.4.0",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "faker": "^6.6.6",
     "react": "18.2.0",
